--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "GPT-3 Writer",
-  "description": "Write a blog post in the style of your favorite thinker anywhere!",
+  "name": "AI-powered game recommendations",
+  "description": "Tell us about your gaming preferences below, so we can make the best suggestions for you !",
   "version": "1.0",
   "manifest_version": 3,
   "icons": {
@@ -11,6 +11,19 @@
   },
   "action": {
     "default_popup": "index.html",
-    "default_title": "Generate blog post"
-  }
+    "default_title": "Generate game suggestions"
+  },
+
+  "background": {
+    "service_worker": "scripts/contextMenuServiceWorker.js"
+  },
+
+  "permissions": ["contextMenus", "tabs", "storage"],
+
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["scripts/content.js"]
+    }
+  ]
 }
